EXAMEN_27_05/entrega_dlp.vsc/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, LITINT=38, 
		LITREAL=39, LITCHAR=40, IDENT=41, COMMENT=42, MULTILINE_COMMENT=43, WHITESPACE=44;
	public static final int
		RULE_start = 0, RULE_definiciones = 1, RULE_definicion = 2, RULE_variablesStruct = 3, 
		RULE_variableStruct = 4, RULE_variables = 5, RULE_def_variable = 6, RULE_params = 7, 
		RULE_param = 8, RULE_def_funcion = 9, RULE_tipo = 10, RULE_sentencias = 11, 
		RULE_sentencia = 12, RULE_expresiones = 13, RULE_expresion = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "definiciones", "definicion", "variablesStruct", "variableStruct", 
			"variables", "def_variable", "params", "param", "def_funcion", "tipo", 
			"sentencias", "sentencia", "expresiones", "expresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'struct'", "'{'", "'}'", "';'", "':'", "'var'", "'='", "','", 
			"'('", "')'", "'float'", "'int'", "'char'", "'['", "']'", "'print'", 
			"'printsp'", "'println'", "'read'", "'return'", "'if'", "'else'", "'while'", 
			"'<'", "'>'", "'.'", "'*'", "'/'", "'+'", "'-'", "'<='", "'>='", "'!='", 
			"'=='", "'&&'", "'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "LITINT", "LITREAL", "LITCHAR", "IDENT", "COMMENT", "MULTILINE_COMMENT", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public DefinicionesContext definiciones;
		public DefinicionesContext definiciones() {
			return getRuleContext(DefinicionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((StartContext)_localctx).definiciones = definiciones();
			setState(31);
			match(EOF);
			 ((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).definiciones.lista);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionesContext extends ParserRuleContext {
		public List<Definition> lista = new ArrayList<Definition>();
		public DefinicionContext definicion;
		public List<DefinicionContext> definicion() {
			return getRuleContexts(DefinicionContext.class);
		}
		public DefinicionContext definicion(int i) {
			return getRuleContext(DefinicionContext.class,i);
		}
		public DefinicionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiciones; }
	}

	public final DefinicionesContext definiciones() throws RecognitionException {
		DefinicionesContext _localctx = new DefinicionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definiciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << IDENT))) != 0)) {
				{
				{
				setState(34);
				((DefinicionesContext)_localctx).definicion = definicion();
				_localctx.lista.add(((DefinicionesContext)_localctx).definicion.ast);
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public Definition ast;
		public Def_variableContext def_variable;
		public Token IDENT;
		public VariablesStructContext variablesStruct;
		public Def_funcionContext def_funcion;
		public Def_variableContext def_variable() {
			return getRuleContext(Def_variableContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public VariablesStructContext variablesStruct() {
			return getRuleContext(VariablesStructContext.class,0);
		}
		public Def_funcionContext def_funcion() {
			return getRuleContext(Def_funcionContext.class,0);
		}
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicion);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				((DefinicionContext)_localctx).def_variable = def_variable();
				((DefinicionContext)_localctx).def_variable.ast.setAmbito("global"); ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).def_variable.ast;
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				match(T__0);
				setState(46);
				((DefinicionContext)_localctx).IDENT = match(IDENT);
				setState(47);
				match(T__1);
				setState(48);
				((DefinicionContext)_localctx).variablesStruct = variablesStruct();
				setState(49);
				match(T__2);
				setState(50);
				match(T__3);
				 ((DefinicionContext)_localctx).ast =  new DefStruct(((DefinicionContext)_localctx).IDENT,((DefinicionContext)_localctx).variablesStruct.lista);
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				((DefinicionContext)_localctx).def_funcion = def_funcion();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).def_funcion.ast;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesStructContext extends ParserRuleContext {
		public List<VarStruct> lista = new ArrayList<VarStruct>();
		public VariableStructContext variableStruct;
		public List<VariableStructContext> variableStruct() {
			return getRuleContexts(VariableStructContext.class);
		}
		public VariableStructContext variableStruct(int i) {
			return getRuleContext(VariableStructContext.class,i);
		}
		public VariablesStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variablesStruct; }
	}

	public final VariablesStructContext variablesStruct() throws RecognitionException {
		VariablesStructContext _localctx = new VariablesStructContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variablesStruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(58);
				((VariablesStructContext)_localctx).variableStruct = variableStruct();
				_localctx.lista.add(((VariablesStructContext)_localctx).variableStruct.ast);
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableStructContext extends ParserRuleContext {
		public VarStruct ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public VariableStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableStruct; }
	}

	public final VariableStructContext variableStruct() throws RecognitionException {
		VariableStructContext _localctx = new VariableStructContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableStruct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			((VariableStructContext)_localctx).IDENT = match(IDENT);
			setState(67);
			match(T__4);
			setState(68);
			((VariableStructContext)_localctx).tipo = tipo();
			setState(69);
			match(T__3);
			 ((VariableStructContext)_localctx).ast =  new VarStruct(((VariableStructContext)_localctx).IDENT, ((VariableStructContext)_localctx).tipo.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public List<DefVariable> list = new ArrayList<DefVariable>();
		public Def_variableContext def_variable;
		public List<Def_variableContext> def_variable() {
			return getRuleContexts(Def_variableContext.class);
		}
		public Def_variableContext def_variable(int i) {
			return getRuleContext(Def_variableContext.class,i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(72);
				((VariablesContext)_localctx).def_variable = def_variable();
				 ((VariablesContext)_localctx).def_variable.ast.setAmbito("local");_localctx.list.add(((VariablesContext)_localctx).def_variable.ast); 
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_variableContext extends ParserRuleContext {
		public DefVariable ast;
		public Token IDENT;
		public TipoContext tipo;
		public ExpresionContext expresion;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Def_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_variable; }
	}

	public final Def_variableContext def_variable() throws RecognitionException {
		Def_variableContext _localctx = new Def_variableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_def_variable);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				match(T__5);
				setState(81);
				((Def_variableContext)_localctx).IDENT = match(IDENT);
				setState(82);
				match(T__4);
				setState(83);
				((Def_variableContext)_localctx).tipo = tipo();
				setState(84);
				match(T__3);
				 ((Def_variableContext)_localctx).ast =  new DefVariable(((Def_variableContext)_localctx).tipo.ast, ((Def_variableContext)_localctx).IDENT,""); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				match(T__5);
				setState(88);
				((Def_variableContext)_localctx).IDENT = match(IDENT);
				setState(89);
				match(T__4);
				setState(90);
				((Def_variableContext)_localctx).tipo = tipo();
				setState(91);
				match(T__6);
				setState(92);
				((Def_variableContext)_localctx).expresion = expresion(0);
				setState(93);
				match(T__3);
				 ((Def_variableContext)_localctx).ast =  new DefVariable(((Def_variableContext)_localctx).tipo.ast, ((Def_variableContext)_localctx).IDENT, "", ((Def_variableContext)_localctx).expresion.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<Param> lista = new ArrayList<Param>();
		public ParamContext param;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(98);
				((ParamsContext)_localctx).param = param();
				_localctx.lista.add(((ParamsContext)_localctx).param.ast);
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(100);
					match(T__7);
					setState(101);
					((ParamsContext)_localctx).param = param();
					_localctx.lista.add(((ParamsContext)_localctx).param.ast);
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public Param ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			((ParamContext)_localctx).IDENT = match(IDENT);
			setState(115);
			match(T__4);
			setState(116);
			((ParamContext)_localctx).tipo = tipo();
			((ParamContext)_localctx).ast =  new Param(((ParamContext)_localctx).IDENT, ((ParamContext)_localctx).tipo.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_funcionContext extends ParserRuleContext {
		public DefFuncion ast;
		public Token IDENT;
		public ParamsContext params;
		public VariablesContext variables;
		public SentenciasContext sentencias;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Def_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_funcion; }
	}

	public final Def_funcionContext def_funcion() throws RecognitionException {
		Def_funcionContext _localctx = new Def_funcionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_def_funcion);
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				((Def_funcionContext)_localctx).IDENT = match(IDENT);
				setState(120);
				match(T__8);
				setState(121);
				((Def_funcionContext)_localctx).params = params();
				setState(122);
				match(T__9);
				setState(123);
				match(T__1);
				setState(124);
				((Def_funcionContext)_localctx).variables = variables();
				setState(125);
				((Def_funcionContext)_localctx).sentencias = sentencias();
				setState(126);
				match(T__2);
				 ((Def_funcionContext)_localctx).ast =  new DefFuncion(((Def_funcionContext)_localctx).IDENT, ((Def_funcionContext)_localctx).params.lista, null , ((Def_funcionContext)_localctx).variables.list, ((Def_funcionContext)_localctx).sentencias.list);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				((Def_funcionContext)_localctx).IDENT = match(IDENT);
				setState(130);
				match(T__8);
				setState(131);
				((Def_funcionContext)_localctx).params = params();
				setState(132);
				match(T__9);
				setState(133);
				match(T__4);
				setState(134);
				((Def_funcionContext)_localctx).tipo = tipo();
				setState(135);
				match(T__1);
				setState(136);
				((Def_funcionContext)_localctx).variables = variables();
				setState(137);
				((Def_funcionContext)_localctx).sentencias = sentencias();
				setState(138);
				match(T__2);
				 ((Def_funcionContext)_localctx).ast =  new DefFuncion(((Def_funcionContext)_localctx).IDENT, ((Def_funcionContext)_localctx).params.lista, ((Def_funcionContext)_localctx).tipo.ast, ((Def_funcionContext)_localctx).variables.list, ((Def_funcionContext)_localctx).sentencias.list);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public Type ast;
		public Token IDENT;
		public Token LITINT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TerminalNode LITINT() { return getToken(GrammarParser.LITINT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tipo);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				match(T__10);
				  ((TipoContext)_localctx).ast =  new RealType(); 
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				match(T__11);
				  ((TipoContext)_localctx).ast =  new IntType(); 
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				match(T__12);
				  ((TipoContext)_localctx).ast =  new CharType(); 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				((TipoContext)_localctx).IDENT = match(IDENT);
				  ((TipoContext)_localctx).ast =  new StructType(((TipoContext)_localctx).IDENT); 
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(151);
				match(T__13);
				setState(152);
				((TipoContext)_localctx).LITINT = match(LITINT);
				setState(153);
				match(T__14);
				setState(154);
				((TipoContext)_localctx).tipo = tipo();
				 ((TipoContext)_localctx).ast =  new ArrayType(((TipoContext)_localctx).LITINT,((TipoContext)_localctx).tipo.ast);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciasContext extends ParserRuleContext {
		public List<Sentence> list = new ArrayList<Sentence>();
		public SentenciaContext sentencia;
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__22) | (1L << T__23) | (1L << T__36) | (1L << LITINT) | (1L << LITREAL) | (1L << LITCHAR) | (1L << IDENT))) != 0)) {
				{
				{
				setState(159);
				((SentenciasContext)_localctx).sentencia = sentencia();
				 _localctx.list.add(((SentenciasContext)_localctx).sentencia.ast); 
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public Sentence ast;
		public ExpresionContext expresion;
		public SentenciasContext sentencias;
		public Token IDENT;
		public ExpresionesContext expresiones;
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<SentenciasContext> sentencias() {
			return getRuleContexts(SentenciasContext.class);
		}
		public SentenciasContext sentencias(int i) {
			return getRuleContext(SentenciasContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ExpresionesContext expresiones() {
			return getRuleContext(ExpresionesContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}
